[package]
authors = ["Wez Furlong <wez@wezfurlong.org>"]
name = "promise"
version = "0.2.0"
edition = "2018"
publish = false

[dependencies]
anyhow.workspace = true
async-executor.workspace = true
async-io.workspace = true
async-task.workspace = true
flume.workspace = true
lazy_static.workspace = true
thiserror.workspace =true
