[package]
name = "portable-pty"
version = "0.8.1"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wez/wezterm"
description = "Cross platform pty interface"
license = "MIT"
documentation = "https://docs.rs/portable-pty"

[dependencies]
anyhow.workspace = true
downcast-rs = "1.0"
filedescriptor = { version="0.8", path = "../filedescriptor" }
log.workspace = true
libc.workspace = true
nix = {version="0.25", features=["term"]}
shell-words = "1.1"
serde_derive = {version="1.0", optional=true}
serde = {version="1.0", optional=true}
serial = "0.4"

[features]
default = []
serde_support = ["serde", "serde_derive"]

[target."cfg(windows)".dependencies]
bitflags = "1.3"
lazy_static.workspace = true
shared_library = "0.1"
winapi = { version = "0.3", features = [
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "synchapi",
]}
winreg = "0.10"

[dev-dependencies]
smol.workspace = true
futures = "0.3"
