[package]
name = "portable-pty"
version = "0.8.1"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wez/wezterm"
description = "Cross platform pty interface"
license = "MIT"
documentation = "https://docs.rs/portable-pty"

[dependencies]
anyhow = "1.0"
downcast-rs = "1.0"
filedescriptor = { version="0.9", path = "../filedescriptor" }
log = "0.4"
libc = "0.2"
nix = {version="0.25", features=["term"]}
shell-words = "1.1"
serde_derive = {version="1.0", optional=true}
serde = {version="1.0", optional=true}
serial = "0.4"

[features]
default = []
serde_support = ["serde", "serde_derive"]

[target."cfg(windows)".dependencies]
bitflags = "1.3"
lazy_static = "1.4"
shared_library = "0.1"
windows = { version="0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Environment",
    "Win32_System_Threading",
]}
winreg = "0.51"

[dev-dependencies]
smol = "1.2"
futures = "0.3"
