[package]
name = "sync-color-schemes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
color-funcs = { path = "../lua-api-crates/color-funcs" }
config = { path = "../config" }
env_logger = "0.10"
futures = "0.3"
lazy_static = "1.4"
libflate = "2"
log = "0.4"
reqwest = "0.11"
rusqlite = {version="0.27", features=["bundled", "blob"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
sqlite-cache = "0.1.3"
tar = "0.4"
tempfile = "3.3"
tokio = { version = "1.19", features = ["rt-multi-thread", "sync", "macros"] }
toml = "0.7"
wezterm-dynamic = { path = "../wezterm-dynamic" }
yaml-rust = "0.4.5"
