[package]
authors = ["Wez Furlong <wez@wezfurlong.org>"]
name = "wezterm-term"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/wez/wezterm"
description = "The Virtual Terminal Emulator core from wezterm; helpful for implementing terminal emulators"
license = "MIT"
documentation = "https://docs.rs/wezterm-term"
keywords = ["terminal", "emulator", "vte"]
readme = "README.md"

[features]
use_serde = ["termwiz/use_serde"]

[dependencies]
anyhow = "1.0"
bitflags = "1.0"
image = "0.23"
lazy_static = "1.4"
log = "0.4"
lru = "0.6"
num-traits = "0.2"
ordered-float = "2.1"
palette = "0.5"
serde = {version="1.0", features = ["rc"]}
sha2 = "0.9"
unicode-segmentation = "1.7"
unicode-width = "0.1"
url = "2"

[dev-dependencies]
pretty_assertions = "0.6"
pretty_env_logger = "0.4"
k9 = "0.11.0"

[dependencies.termwiz]
version = "0.13"
path = "../termwiz"
