[package]
authors = ["Wez Furlong"]
name = "termwiz"
version = "0.22.0"
edition = "2018"
repository = "https://github.com/wez/wezterm"
description = "Terminal Wizardry for Unix and Windows"
license = "MIT"
documentation = "https://docs.rs/termwiz"
keywords = ["terminal", "readline", "console", "curses"]
readme = "README.md"

[dependencies]
# backtrace = "0.3"
base64 = "0.21"
bitflags = "2.0"
cassowary = {version="0.3", optional=true}
anyhow = "1.0"
fancy-regex = "0.11"
filedescriptor = { version="0.8", path = "../filedescriptor" }
finl_unicode = "1.2"
fixedbitset = "0.4"
fnv = {version="1.0", optional=true}
hex = "0.4"
image = {version="0.25", optional=true}
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
memmem = "0.1"
num-traits = "0.2"
ordered-float = "4.1"
pest = "2.1"
pest_derive = "2.1"
phf = "0.11"
semver = "0.11"
serde = {version="1.0", features = ["rc", "derive"], optional=true}
siphasher = "0.3"
sha2 = "0.10"
tempfile = "3.4"
terminfo = "0.8"
thiserror = "1.0"
unicode-segmentation = "1.8"
ucd-trie = "0.1"
vtparse = { version="0.6.2", path="../vtparse" }
wezterm-bidi = { path = "../bidi", version="0.2.1" }
wezterm-blob-leases = { path = "../wezterm-blob-leases", version="0.1" }
wezterm-color-types = { path = "../color-types", version="0.3" }
wezterm-input-types = { path = "../wezterm-input-types", version="0.1", default-features=false }
wezterm-dynamic = { path = "../wezterm-dynamic", version="0.2" }

[features]
widgets = ["cassowary", "fnv"]
use_serde = ["serde", "wezterm-color-types/use_serde", "wezterm-blob-leases/serde", "bitflags/serde", "wezterm-input-types/serde"]
use_image = ["image"]
docs = ["widgets", "use_serde"]

[dev-dependencies]
criterion = "0.5"
varbincode = "0.1"
k9 = "0.12"
env_logger = "0.11"

[dependencies.num-derive]
features = ["full-syntax"]
version = "0.3"

[target."cfg(unix)".dependencies]
signal-hook = "0.3"
termios = "0.3"
nix = "0.26"

[target."cfg(windows)".dependencies.winapi]
features = [
    "winbase",
    "winerror",
    "winnls",
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "synchapi",
    "memoryapi",
    "winnt",
    "impl-default"
]
version = "0.3.9"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[[bench]]
name = "wcwidth"
harness = false

[[bench]]
name = "cell"
harness = false

