[package]
authors = ["Wez Furlong <wez@wezfurlong.org>"]
name = "vtparse"
version = "0.5.0"
edition = "2018"
repository = "https://github.com/wez/wezterm"
description = "Low level escape sequence parser"
license = "MIT"
documentation = "https://docs.rs/vtparse"
keywords = ["terminal", "escape", "ansi", "sequence", "parser"]
readme = "README.md"

[dependencies]
utf8parse = "0.2"

[dev-dependencies]
pretty_assertions = "0.6"
