[package]
name = "wezterm-blob-leases"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/wez/wezterm"
description = "Manage image blob caching/leasing for wezterm"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2"
once_cell = "1.8"
mac_address = "1.1"
serde = {version="1.0", features=["derive"], optional=true}
sha2 = "0.10"
tempfile = {version="3.4", optional=true}
thiserror = "1.0"
uuid = {version="1.3", features=["v1", "rng"]}

[features]
default = []
serde = ["dep:serde", "uuid/serde"]
simple_tempdir = ["dep:tempfile"]
