[package]
name = "wezterm-client"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-io.workspace = true
async-trait.workspace = true
async_ossl.workspace = true
codec.workspace = true
config.workspace = true
filedescriptor.workspace = true
futures.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
lru.workspace = true
metrics.workspace = true
mux.workspace = true
openssl.workspace = true
parking_lot.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
rangeset.workspace = true
ratelim.workspace = true
smol.workspace = true
termwiz.workspace = true
textwrap.workspace = true
thiserror.workspace = true
umask.workspace = true
url.workspace = true
wezterm-dynamic.workspace = true
wezterm-ssh.workspace = true
wezterm-term = { workspace=true, features=["use_serde"] }
wezterm-uds.workspace = true

[target."cfg(windows)".dependencies]
winapi = { workspace=true, features = [
    "winuser",
]}
