[package]
name = "wezterm-dynamic"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/wezterm/wezterm"
description = "config serialization for wezterm via dynamic json-like data values"
license = "MIT"

[dependencies]
log.workspace = true
ordered-float.workspace = true
strsim.workspace = true
thiserror.workspace = true
wezterm-dynamic-derive.workspace = true

[dev-dependencies]
maplit.workspace = true
