[package]
name = "wezterm-font"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = { path = "../config" }
encoding_rs = "0.8"
enum-display-derive = "0.1"
euclid = "0.22"
freetype = { path = "../deps/freetype" }
harfbuzz = { path = "../deps/harfbuzz" }
lazy_static = "1.4"
log = "0.4"
memmap2 = "0.2"
metrics = { version="0.17", features=["std"]}
mux = { path = "../mux" }
ordered-float = "2.10"
rangeset = { path = "../rangeset" }
termwiz = { path = "../termwiz" }
thiserror = "1.0"
unicode-segmentation = "1.8"
unicode-general-category = "0.3"
walkdir = "2"
wezterm-color-types = { path = "../color-types" }
wezterm-input-types = { path = "../wezterm-input-types" }
wezterm-term = { path = "../term", features=["use_serde"] }
wezterm-toast-notification = { path = "../wezterm-toast-notification" }
wezterm-bidi = { path = "../bidi" }

[target.'cfg(any(target_os = "android", all(unix, not(target_os = "macos"))))'.dependencies]
fontconfig = { path = "../deps/fontconfig" }

[target."cfg(windows)".dependencies]
dwrote = "0.11"
winapi = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-text = "19.0"

[dev-dependencies]
k9 = "0.11.0"
pretty_env_logger = "0.4"
