[package]
name = "wezterm-gui"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
build = "build.rs"
resolver = "2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vendored-fonts", "wayland"]
wayland = ["window/wayland"]
distro-defaults = ["config/distro-defaults"]
vendor-nerd-font-symbols-font = ["wezterm-font/vendor-nerd-font-symbols"]
vendor-jetbrains-font = ["wezterm-font/vendor-jetbrains"]
vendor-roboto-font = ["wezterm-font/vendor-roboto"]
vendor-noto-emoji-font = ["wezterm-font/vendor-noto-emoji"]
vendored-fonts = [
  "vendor-nerd-font-symbols-font",
  "vendor-jetbrains-font",
  "vendor-roboto-font",
  "vendor-noto-emoji-font"
]
dhat-heap = ["dhat"]    # if you are doing heap profiling
dhat-ad-hoc = ["dhat"]  # if you are doing ad hoc profiling

[build-dependencies]
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7"
cc = "1.0"

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
bytemuck = { version="1.4", features=["derive"]}
chrono = {version="0.4", default-features=false}
clap = {version="4.0", features=["derive"]}
codec = { path = "../codec" }
colorgrad = "0.6"
config = { path = "../config" }
downcast-rs = "1.0"
dhat = {version="0.3", optional=true}
dirs-next = "2.0"
emojis = "0.6"
env-bootstrap = { path = "../env-bootstrap" }
euclid = "0.22"
fastrand = "2.0"
filedescriptor = { version="0.8", path = "../filedescriptor" }
finl_unicode = "1.2"
frecency = { path = "../frecency" }
futures = "0.3"
nucleo-matcher = "0.3"
hdrhistogram = "7.1"
http_req = "0.11"
image = "0.25"
lazy_static = "1.4"
libc = "0.2"
lfucache = { path = "../lfucache" }
log = "0.4"
luahelper = { path = "../luahelper" }
metrics = "0.23"
mlua = {version="0.9", features=["send"]}
mux = { path = "../mux" }
mux-lua = { path = "../lua-api-crates/mux" }
once_cell = "1.8"
ordered-float = "4.1"
parking_lot = "0.12"
portable-pty = { path = "../pty", features = ["serde_support"]}
promise = { path = "../promise" }
rangeset = { path = "../rangeset" }
ratelim= { path = "../ratelim" }
rayon = "1.7"
regex = "1"
serde = {version="1.0", features = ["rc", "derive"]}
serde_json = "1.0"
shlex = "1.1"
smol = "2.0"
tabout = { path = "../tabout" }
tempfile = "3.4"
terminfo = "0.9"
termwiz = { path = "../termwiz" }
termwiz-funcs = { path = "../lua-api-crates/termwiz-funcs" }
textwrap = "0.16"
thiserror = "1.0"
tiny-skia = "0.11"
umask = { path = "../umask" }
unicode-normalization = "0.1"
unicode-segmentation = "1.8"
unicode-width = "0.1"
url = "2"
url-funcs = { path = "../lua-api-crates/url-funcs" }
walkdir = "2"
wezterm-bidi = { path = "../bidi" }
wezterm-blob-leases = { path = "../wezterm-blob-leases", version="0.1", features=["simple_tempdir"] }
wezterm-client = { path = "../wezterm-client" }
wezterm-dynamic = { path = "../wezterm-dynamic" }
wezterm-font = { path = "../wezterm-font" }
wezterm-gui-subcommands = { path = "../wezterm-gui-subcommands" }
wezterm-mux-server-impl = { path = "../wezterm-mux-server-impl" }
wezterm-open-url = { path = "../wezterm-open-url" }
wezterm-ssh = { path = "../wezterm-ssh" }
wezterm-term = { path = "../term", features=["use_serde"] }
wezterm-toast-notification = { path = "../wezterm-toast-notification" }
wgpu = "22.1"
window = { path = "../window" }
window-funcs = { path = "../lua-api-crates/window-funcs" }

[target."cfg(windows)".dependencies]
shared_library = "0.1"
winapi = { version = "0.3", features = [
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "synchapi",
    "winsock2",
]}
windows = { version="0.33.0", features = [
    "Win32_UI_Shell",
]}

[dev-dependencies]
k9 = "0.12.0"
env_logger = "0.11"
benchmarking = "0.4"
