[package]
name = "wezterm-input-types"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2021"
repository = "https://github.com/wez/wezterm"
description = "config serialization for wezterm via dynamic json-like data values"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
euclid = "0.22"
lazy_static = "1.4"
serde = {version="1.0", features = ["rc", "derive"], optional=true}
wezterm-dynamic = {path="../wezterm-dynamic", version="0.2"}

[features]
default = ["serde"]
