[package]
name = "wezterm-input-types"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2021"
repository = "https://github.com/wezterm/wezterm"
description = "config serialization for wezterm via dynamic json-like data values"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
euclid.workspace = true
lazy_static.workspace = true
serde = {workspace=true, features = ["rc", "derive"], optional=true}
wezterm-dynamic.workspace = true

[features]
default = ["serde"]
