[package]
name = "wezterm-mux-server-impl"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async_ossl = { path = "../async_ossl" }
codec = { path = "../codec" }
config = { path = "../config" }
futures = "0.3"
hostname = "0.4"
lazy_static = "1.4"
log = "0.4"
mux = { path = "../mux" }
portable-pty = { path = "../pty", features = ["serde_support"]}
promise = { path = "../promise" }
rangeset = { path = "../rangeset" }
rcgen = "0.12"
smol = "1.2"
url = "2"
wezterm-client = { path = "../wezterm-client" }
wezterm-term = { path = "../term", features=["use_serde"] }
termwiz = { path = "../termwiz", features=["use_serde"] }

[target."cfg(windows)".dependencies]
uds_windows = "1.0"
winapi = { version = "0.3", features = [ "winuser" ]}
